[package]
name = "assimp-sys"
version = "0.3.1"
edition = "2021"
authors = ["Lee Jeffery <lee@leejeffery.co.uk>"]

description = "Rust FFI bindings for the Assimp library"
repository = "https://github.com/Eljay/assimp-sys"

license = "MIT"
readme = "README.md"

[dependencies]
libc = "*"
bitflags = "*"

[build-dependencies]
cmake = "0.1.54"
flate2 = "1.0.35"
tar = "0.4.43"